# source-to-prompt-update

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_APPROACH.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  README.md  STATUS.md  WINDOWS_TAURI_SETUP.md  package-lock.json  package.json  your-source-to-prompt.html
apps/browser/: index.html  package.json
apps/electron/: index.html  package.json
apps/tauri/: index.html  package.json
apps/tauri/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
scripts/: check-tauri-linux-deps.sh  check-tauri-windows-deps.ps1  install-tauri-linux-deps.sh  run-electron.mjs  run-tauri-cargo.mjs  run-tauri-cli.mjs  run-tauri-doctor.mjs  stop-electron.mjs
scripts/lib/: electron-cli-lock.mjs  tauri-cli-lock.mjs  tauri-dev-env.mjs  tauri-frontend-dist.mjs
tests/application/: README.md  controller.test.js  selectors.test.js  use-cases.test.js
tests/core/: README.md  electron-cli-lock.test.js  filter-engine.test.js  gitignore.test.js  normalize-error.test.js  output-engine.test.js  output-presentation.test.js  profiles-engine.test.js  repository-index.test.js  scan-engine.test.js  selection-engine.test.js  tauri-cli-lock.test.js  tauri-frontend-dist.test.js  text-file-rules.test.js  transform-engine.test.js
tests/integration/: README.md  browser-hosts.test.js  electron-app.test.js  electron-entry.test.js  electron-hosts.test.js  shell-ui-boot.test.js  tauri-app.test.js  tauri-dev-env.test.js  tauri-entry.test.js  tauri-hosts.test.js
(+20 files in other folders)
