[package]
name = "ysp-tauri"
version = "0.1.0"
description = "Primary Tauri shell for Your Source to Prompt."
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "ysp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
dirs = "6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
